--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Loops and Conditionals</title>
-  <script src="main.js"></script>
 </head>
 <body>
-  
+  <h2>
+    Reversing a String 
+  </h2>
+  <p>
+    The constant string is <span id="original-string"></span>
+  </p>
+    <p> The reversed string is <span id="reversed-string"></span></p>
+  <h2>
+    Finding the longest Word
+  </h2>
+  <p>
+    The sentence is (<span id="sentence"></span>)
+  </p>
+  <p>
+    the longest word is <span id="longest-word"></span>
+  </p>
+  <script src="main.js"></script>
 </body>
 </html>
